--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="footer">
+<footer class="footer u-margin-top-xxxxlarge">
 	<div class="row" style="background: linear-gradient(white, #4252af); padding-top: 6rem;	">
 		<div class="col-sm-6" style="margin-left: -53px; padding-left: 35px; padding-right: 0px;">
 			<div class="footer__navigation">
