--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,6 +4,6 @@ layout: default
 
 <div class="container u-margin-bottom-xlarge"  style="width: 100%;">
     <div class="row">
-        <main id="markdown-content-container" class="container" style="width:90%">{{ content }}</main>
+        <article id="markdown-content-container" class="container" style="width:90%">{{ content }}</article>
     </div>
 </div>
