--- a/_sass/custom/_utilities.scss
+++ b/_sass/custom/_utilities.scss
@@ -227,6 +227,14 @@
     margin-top: $value-xxlarge;
 }
 
+.u-margin-top-xxxlarge {
+    margin-top: $value-xxxlarge;
+}
+
+.u-margin-top-xxxxlarge {
+    margin-top: $value-xxxxlarge;
+}
+
 .u-margin-top-responsive {
     margin-top: calc(2px + 3vw);
 }
