--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -325,7 +325,7 @@ input[type=search]:focus {
 }
 
 .jumbotron h1 {
-    color: white;    
+    color: white !important;    
     text-shadow: 1px 1px black;
 }
 
