--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 						<a href="http://help.geneontology.org" class="footer__link" target="blank">Contact us</a>
 					</li>
 					<li class="footer__item">
-						<a href="/docs/go-citation-policy/" class="footer__link">Terms</a>
+						<a href="/docs/go-citation-policy/" class="footer__link">Terms of Use</a>
 					</li>
 				</ul>
 			</div>
