--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 
 <footer class="footer u-margin-top-xxxxlarge">
 	<div class="row" style="background: linear-gradient(white, #4252af); padding-top: 6rem;	">
-		<div class="col-sm-6" style="margin-left: -53px; padding-left: 35px; padding-right: 0px;">
+		<div class="col-sm-6" style="padding-left: 35px; padding-right: 0px;">
 			<div class="footer__navigation">
-				<ul class="footer__list">
+				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
 						<a href="/" class="footer__link">Gene Ontology</a>
 					</li>
@@ -19,7 +19,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-sm-6" style="padding-left: 35px; padding-right: 0px">
+
+		<div class="col-sm-6" style="padding-left: 0px; padding-right: 35px">
 			<p class="footer__copyright">
 				<small class="footer__text">
 					Copyright © 1999-2018
