--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 						<a href="http://help.geneontology.org" class="footer__link" target="blank">Contact us</a>
 					</li>
 					<li class="footer__item">
-						<a href="/docs/go-citation-policy/" class="footer__link">Terms of Use</a>
+						<a href="/docs/go-citation-policy/" class="footer__link">Terms of use</a>
 					</li>
 				</ul>
 			</div>
@@ -30,7 +30,7 @@
 					<br>
 					The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant
 					<a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17" class="footer__link" target="blank">
-						2U41HG002273-17</a>].
+						2U41HG002273-17</a>]
 				</small>
 			</p>
 		</div>
