--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
-						<a href="/" class="footer__link">Gene Ontology</a>
+						<a href="/" class="footer__link">Home</a>
 					</li>
 					<li class="footer__item">
 						<a href="/docs/contributors/" class="footer__link">Contributors</a>
