WIP new design tests

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 <footer class="footer u-margin-top-xxxxlarge">
-	<div class="row" style="background: linear-gradient(white, #4252af); padding-top: 6rem;	">
+	<div class="row" style="    background-color: rgba(7, 0, 134); padding-top: 6rem;	">
 		<div class="col-sm-6" style="padding-left: 35px; padding-right: 0px;">
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
@@ -14,7 +14,7 @@
 						<a href="http://help.geneontology.org" class="footer__link" target="blank">Contact us</a>
 					</li>
 					<li class="footer__item">
-						<a href="/docs/go-citation-policy/" class="footer__link">Terms of use</a>
+						<a href="/docs/go-citation-policy/" class="footer__link">Citation and Terms</a>
 					</li>
 				</ul>
 			</div>
