--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -11,7 +11,7 @@
             </button>
             <a class="navbar-brand go-link" href="{{ site.baseurl }}/">
                 <span>
-                    <img src="{{site.baseurl}}/img/logonav.png">
+                    <img src="/assets/go-logo.large.png">
                 </span>
                 
             </a>
