some images to consider and various layout things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,11 @@
 
-<footer class="footer u-margin-top-xxxxlarge">
-	<div class="row" style="    background-color: rgba(7, 0, 134); padding-top: 6rem;	">
+<footer class="footer">
+	<div >
 		<div class="col-sm-6" style="padding-left: 35px; padding-right: 0px;">
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
 						<a href="/" class="footer__link">Home</a>
-					</li>
-					<li class="footer__item">
-						<a href="/docs/contributors/" class="footer__link">Contributors</a>
 					</li>
 					<li class="footer__item">
 						<a href="http://help.geneontology.org" class="footer__link" target="blank">Contact us</a>
@@ -24,9 +21,9 @@
 			<p class="footer__copyright">
 				<small class="footer__text">
 					Copyright © 1999-2018
-					<a href="http://geneontology.org/"  class="footer__link" title="The Gene Ontology project website">the Gene Ontology</a>
-					<br> Member of the
-					<a href="http://www.obofoundry.org/"  class="footer__link" rel="external" title="Open Biological and Biomedical Ontologies" target="blank">Open Biological and Biomedical Ontologies</a>
+					<br>
+					Member of the
+					<a href="http://www.obofoundry.org/"  class="footer__link" rel="external" title="Open Biological Ontologies" target="blank">Open Biological Ontologies Foundry</a>
 					<br>
 					The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant
 					<a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17" class="footer__link" target="blank">
