--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -6,17 +6,17 @@
       padding: 10px 0;
     }
 }
-  
+
 .navbar-nav li a {
       margin: 0px;
 }
-  
+
 .header-container {
     /* background-color: black; */
     /* background: url('../img/bg.jpg') no-repeat 50% 0; */
     /* color: #fff; */
     color: #333;
-  
+
     h1 {
       /* color: #fff; */
       color: #333;
@@ -28,7 +28,7 @@
 }
 
 .navbar-container {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .page-content {
@@ -37,13 +37,13 @@
 }
 
 
-  
+
 .post-list-container {
     li a.active {
       font-weight: bold;
     }
 }
-  
+
 *[id]:before {
     display: block;
     content: " ";
@@ -55,7 +55,7 @@
 .navbar-form .has-feedback .form-control-feedback{
     top:10px
 }
-    
+
 img[src$="center"] {
     display:block;
     margin: 0 auto;
@@ -74,7 +74,7 @@ td, th {
         float:left;
         height:100vh;
     }
-    
+
 .left {
         background: #337ab7;
         display: inline-block;
@@ -92,22 +92,22 @@ td, th {
         border-style:solid;
         border-color:#ccc;
         border-width:1px;
-    }    
+    }
 
 .left:hover {
         width: 250px;
-    }    
-    
+    }
+
 .item:hover {
         background-color:#ccc;
         }
-        
+
 .left .glyphicon {
         margin:15px;
         width:20px;
         color:#fff;
     }
-    
+
 .right .glyphicon {
         color:#a9a9a9;
     }
@@ -115,7 +115,7 @@ span.glyphicon.glyphicon-refresh{
     font-size:17px;
     vertical-align: middle !important;
     }
-    
+
 .item {
         height:50px;
         overflow:hidden;
@@ -167,12 +167,12 @@ input[type=search]:focus {
     color: #aaa !important;
     font-size: 12px;
     }
-        
-    
-    
-   
 
-    
+
+
+
+
+
 
 
 
@@ -326,31 +326,26 @@ input[type=search]:focus {
 }
 
 .jumbotron h1 {
-    color: white !important;    
+    color: white !important;
     text-shadow: 1px 1px black;
 }
 
 .go-navbar {
     box-shadow: 1px 1px 29px rgba(0, 0, 0, 0.25);
-    // border-radius: 0px 0px 20px 20px;
+    background-color: #f7fff3;
     border-radius: 0px;
-    padding-right: 10px;    
+    padding-right: 10px;
     margin-top: 0px;
     border: none;
     border-color: none;
     border-top-style: inset;
-    border-top-color: lightgray;
-    border-top-width: 3px;
+    border-top-color: #002379;
+    border-top-width: 1px;
 }
 
 .go-search-bar {
     box-shadow: 1px 1px 9px navy;
 }
-
-
-
-
-
 
 .footer {
     // background-color: $color-grey-dark-3;
@@ -358,27 +353,28 @@ input[type=search]:focus {
     // background-color: lightgrey;
     // background: linear-gradient(white, #4252af);
 
-    background-color: $gray-lighter;
-    color: $gray-dark;
-
+    background-color: #f7fff3;
+    border-top: 1px solid #002379;
+    color: #002379;
     position: absolute;
     bottom: 0;
     width: 100%;
-    
-    background-color: transparent;
-    color: black;
-    font-size: 1.8rem;
+
+    /* background-color: transparent; */
+    /* color: black; */
+    /* Needs to match the header in color, font, size, etc. */
+    font-size: 13px;
 
     &__link {
-        color: white !important;
-        text-shadow: 1px 1px 9px black;
+        /* color: black !important; */
+        /* text-shadow: 1px 1px 9px black; */
     }
 
     &__text {
-        color: white !important;
-        text-shadow: 1px 1px 9px black;
+        /* color: #002379 !important; */
+        /* text-shadow: 1px 1px 9px black; */
     }
-    
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -390,8 +386,7 @@ input[type=search]:focus {
     }
 
     &__navigation {
-        border-top: 1px solid $color-grey-dark;
-        padding-top: 2rem;
+        letter-spacing: 0.35rem;
         display: inline-block;
     }
 
@@ -427,8 +422,6 @@ input[type=search]:focus {
     // }
 
     &__copyright {
-        border-top: 1px solid $color-grey-dark;
-        padding-top: 2rem;
         width: 80%;
         float: right;
     }
@@ -445,7 +438,7 @@ $gutter-horizontal: 6rem;
 
 .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
-    
+
 }
 
 
@@ -455,5 +448,22 @@ $gutter-horizontal: 6rem;
     width: 300px;
     border-radius: calc(8px + 1.5vw) calc(.5vw);
     outline: none !important;
-    padding: 15px;    
+    padding: 15px;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  /* box-shadow: 1px 1px 3px #888; */
+  transition: 0.3s;
+  width: 25%;
+  /* border: 1px solid gray; */
+  /* border-top: 10px solid green; */
+  min-height: 250px;
+  padding: 10px;
+  margin: 10px;
+  
+  &__container {
+    padding: 2px 16px;
+  }
 }
