--- a/_sass/custom/_utilities.scss
+++ b/_sass/custom/_utilities.scss
@@ -245,3 +245,10 @@
 .u-no-decorationa:hover:after  {
     text-decoration: none !important;
 }
+
+
+
+
+.u-padding-bottom-xlarge {
+    padding-bottom: $value-xlarge;
+}
