--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -22,7 +22,7 @@
 
                 {% for doc in site.data.docs %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        <a class="nav-link dropdown-toggle link-extended" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
                             style="padding: 8px 3px;" aria-expanded="false">
                             {{ doc.title }}
                         </a>
