--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -332,7 +332,7 @@ input[type=search]:focus {
 
 .go-navbar {
     box-shadow: 1px 1px 29px rgba(0, 0, 0, 0.25);
-    background-color: white;
+    background-color: $navbar-color;
     border-radius: 0px;
     padding-right: 10px;
     margin-top: 0px;
@@ -358,13 +358,15 @@ input[type=search]:focus {
     border-top: 1px solid #002379;
     color: #002379;
     position: absolute;
-    bottom: 0;
+    // bottom: 0;
     width: 100%;
 
     /* background-color: transparent; */
     /* color: black; */
     /* Needs to match the header in color, font, size, etc. */
     font-size: 13px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px -0.5rem 4rem;
+
 
     &__link {
         /* color: black !important; */
@@ -500,6 +502,7 @@ $gutter-horizontal: 6rem;
 
     &__container {
         padding: 10px;
+        margin: 10px 5px;
         box-shadow: rgba(0, 0, 0, 0.15) 0px 1.5rem 4rem;
         border-radius: 3px !important;
         background-color: rgb(255, 255, 255) !important;
