--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -359,7 +359,7 @@ input[type=search]:focus {
     border-top: 1px solid #002379;
     color: #002379;
     position: absolute;
-    bottom: 0;
+    // bottom: 0;
     width: 100%;
 
     /* background-color: transparent; */
