Adjusting some styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	<hr style="margin:8px; padding:0px">
 
 	<div >
-		<div class="col-sm-6" style="padding-left: 35px; padding-right: 0px;">
+		<div class="col-sm-6" style="padding-left: 45px; text-align: left;">
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 
-		<div class="col-sm-6" style="padding-left: 0px; padding-right: 35px">
+		<div class="col-sm-6" style="padding-left: 0px; padding-right: 35px; text-align: right;">
 			<p class="footer__copyright">
 				<small class="footer__text">
 					Copyright © 1999-2018
