--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 
     font-family: "Lato", sans-serif;
-    font-weight: 100;
+    font-weight: 400 !important;
     line-height: $default-line-height;
 
     outline: none;
