Fix the search documentation indexing

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -65,12 +65,13 @@ search.start();
     .post-link .ais-Highlight,
     em {
       /* color: #111; */
-      font-style: normal;
       /* text-decoration: underline; */
-      background-color: yellow;      
+      /* background-color: yellow;       */
       /* color: red; */
-      font-style: italic;
-      font-weight: 900;
+      /* font-style: italic; */
+      font-style: normal;
+      font-weight: 900 !important;
+      text-decoration: underline;
     }
     .post-breadcrumbs {
       color: #424242;
