Adding small bottom margin to search

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -59,6 +59,10 @@ search.start();
       border-radius: 25px;
     }    
 
+    .ais-hits {
+      margin-bottom: 10rem;      
+    }
+
     .post-item {
       margin-bottom: 30px;
     }
