Fixing header stats

--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -123,6 +123,11 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
     }
 }
 
+.header_stat {
+    display: inline-block;
+    color: white;
+}
+
 @keyframes moveInLeft {
     0% {
         opacity: 0;
