--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -96,17 +96,17 @@
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px;">
+                        <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px;">
+                        <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px;">
+                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
                     </li>
