Card Styling - improving height & link positioning

--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -513,6 +513,8 @@ $gutter-horizontal: 6rem;
 
     &__description {
         padding: 5px;
+        margin-bottom: 50px;
+        min-height: 170px;
     }
 
     &__link {
