--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -66,7 +66,7 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
 }
 
 .dropdown-menu {
-    width: 300px !important;
+    width: 250px;
     border-radius: 0px 20px 20px 0px;
     box-shadow: -5px 10px 29px black;
     // padding: 5px !important;
@@ -83,12 +83,16 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
     padding: 0px;
     margin: 0px;
     transition: all 0.2s;
+
     &__link {
         display: block;
         padding: 8px 6px;
         text-decoration: none;
         font-weight: 400 !important;
-        width: 100%; // transition: all 0.2s;
+        width: 100%; 
+        transition: padding 0.2s;
+        // transition:  0.15s text-align ease;
+        
         &:hover {
             text-decoration: none;
             font-weight: 400 !important;
@@ -96,6 +100,7 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
             background-color: navy;
             color: white;
             border-radius: 5px;
+            padding-left: 10px;
         }
     }
 }
@@ -176,4 +181,19 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
         opacity: 1;
         transform: translate(0);
     }
+}
+
+
+.nav > li {
+    margin-right: 15px;
+}
+
+.fa {
+    text-shadow: rgba(0, 0, 0, 0.25) 1.5px 1.5px 5px;    
+}
+
+.input_hint {
+    font-size: $value-xsmall;
+    font-style: italic;
+    margin-top: 0.3rem;
 }
