--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -2,6 +2,19 @@ h1 {
     color: #002379 !important;
 }
 
+h2 {
+    color: #002379 !important;
+    margin-top: 40px 0px;
+}
+
+h3 {
+    margin: 20px 0px
+}
+
+h4 {
+    margin: 20px 0px
+}
+
 b, strong {
     font-weight: 800 !important;
 }
