--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -51,7 +51,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width: 280px; margin-bottom: 0px;">
 
-                        <a href="{{" /search "}}" title="Search GO Documentation"   class="dropdown-menu__item__link">
+                        <a href="/search.html" title="Search GO Documentation"   class="dropdown-menu__item__link">
                             <i class="fa fa-search"></i>
                             &nbsp; Search Documentation</a>
     
