Updating 2018 -> 2019 in disclaimers + Adding direct link to citation & terms in Help menu

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -58,7 +58,11 @@
                         <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-question" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Frequently Asked Questions</a>
-
+    
+                        <a href="{{ " /docs/go-citation-policy/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
+                            <i class="fa fa-pencil" style="margin-right: 4px; margin-left: 2px;"></i>
+                            &nbsp; Citation and Terms</a>
+    
                         <a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
                             <i class="fa fa-comments-o"></i>
                             &nbsp; Contact us</a>
