--- a/_sass/custom/_utilities.scss
+++ b/_sass/custom/_utilities.scss
@@ -257,6 +257,10 @@
     letter-spacing: 2.5px !important; 
 }
 
+.u-letter-spacing-xxsmall {
+    letter-spacing: 1.5px !important;     
+}
+
 .u-line-height-single,
 .u-line-height-single:before{
     line-height: 1 !important;
