--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -3,7 +3,7 @@
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+ $grid-float-breakpoint: 967px;
 
 // Core variables and mixins
 @import "bootstrap/variables";
