--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 						<a href="http://help.geneontology.org" class="footer__link link-extended" style="color: white !important;" target="blank">Contact us</a>
 					</li>
 					<li class="footer__item">
-						<a href="/docs/go-citation-policy/" class="footer__link link-extended" style="color: white !important;">Citation and Terms</a>
+						<a href="/docs/go-citation-policy/" class="footer__link link-extended" style="color: white !important;">Citation and Terms of Use</a>
 					</li>
 				</ul>
 			</div>
