Adding "Powered by PANTHER" for the enrichment + increasing hint size

--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -206,7 +206,7 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
 }
 
 .input_hint {
-    font-size: $value-xsmall;
+    font-size: $value-xmsmall;
     font-style: italic;
     margin-top: 0.3rem;
 }
