--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -39,6 +39,7 @@ $color-purple-dark: #6b2081;
 
 $value-xxsmall: 0.5rem;
 $value-xsmall: 1rem;
+$value-xmsmall: 1.25rem;
 $value-small: 2rem;
 $value-medium: 4rem;
 $value-large: 6rem;
