--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -15,6 +15,11 @@ h4 {
     margin: 20px 0px
 }
 
+hr {
+    margin-top: 52px;
+    border-top: 1px solid lightsteelblue;
+}
+
 b, strong {
     font-weight: 800 !important;
 }
